--- a/second.html
+++ b/second.html
@@ -7,16 +7,13 @@
   </head>
   <body>
     <div class="wrapper">
-      <img src="pic.svg" height="200" width="" />
-      <br />
       <div class="title">
-        Welcome, Loser
+        Second fkn page
       </div>
       <div class="content">
-        The writing app that does it all! Let's start writing some shit.<br />
-        Some secondory shitty text goes here.
+        The writing app that dosdgdgshfshdf writing some shit.
       </div>
-      <button><a href="second.html"> Let's Writtte</a></button>
+      <button><a href="index.html">Go Back</a></button></a>
     </div>
     <script>
       // You can also require other files to run in this process
