Latest build with dir organized

--- a/editorlight.html
+++ b/editorlight.html
@@ -9,7 +9,8 @@
     <div class="grid">
       <div class="left">
         <a id="back" href="selection.html"
-          ><img id="icon" src="arrowleft.svg" height="12" width="" />Go Back</a
+          ><img id="icon" src="./media/arrowleft.svg" height="12" width="" />Go
+          Back</a
         >
       </div>
       <div class="mid">
@@ -17,10 +18,10 @@
       </div>
       <div class="right">
         <span id="open" class="openlight">
-          <img id="icon" src="file.svg" height="14" width="" />Open
+          <img id="icon" src="./media/file.svg" height="14" width="" />Open
         </span>
         <span id="new" class="newlight">
-          <img id="icon" src="plus.svg" height="12" width="" />New
+          <img id="icon" src="./media/plus.svg" height="12" width="" />New
         </span>
       </div>
     </div>
