--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <img src="pic.svg" height="200" width="" />
+      <img src="./media/pic.svg" height="200" width="" />
       <br />
       <div class="title">
         Welcome, Loser
