--- a/selection.html
+++ b/selection.html
@@ -9,7 +9,8 @@
     <div class="grid">
       <div class="left">
         <a id="back" href="index.html"
-          ><img id="icon" src="arrowleft.svg" height="12" width="" />Go Back</a
+          ><img id="icon" src="./media/arrowleft.svg" height="12" width="" />Go
+          Back</a
         >
       </div>
       <div class="mid">
@@ -21,7 +22,7 @@
       <div class="newgrid">
         <div class="left panel">
           <h1>Fancy Light.</h1>
-          <img id="icon" src="light.svg" height="150px" width="" />
+          <img id="icon" src="./media/light.svg" height="150px" width="" />
           <div class="innerContent">
             If you’re more of a childish gambino and like it light and sweet in
             the face, then select this.. you pathetic asshole. You better mind
@@ -34,7 +35,7 @@
 
         <div class="right panel">
           <h1>Fkn Dark.</h1>
-          <img id="icon" src="dark.svg" height="150px" width="" />
+          <img id="icon" src="./media/dark.svg" height="150px" width="" />
           <div class="innerContent">
             Woa, the real deal. If you want to pretend like you know everything
             in this world and fkn dark mode is the nerdiest thing ever with some
