--- a/wriiite/editordark.html
+++ b/wriiite/editordark.html
@@ -3,6 +3,7 @@
   <head>
     <style>
       body {
+        /* -webkit-app-region: drag; */
         background-color: #0a0e14;
         font-family: "Roboto Mono";
       }
